# mobman-summerschool-ros-pkg

./: README.md
arduino/: README.md
arduino/ATCommandServer/: ATCommandServer.ino
arduino/AutoDemo/DemoMode/: DemoMode.ino
arduino/BTServer/: BTServer.ino
arduino/SimVehicle/: SimVehicle.ino
arduino/TestSensorsAndServos/: TestSensorsAndServos.ino
arduino/VehicleControl/: VehicleControl.ino
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/scripts/: sonar_teleop.py  teleop.py
vehicle_control/src/: object_search.cpp
vehicle_interface/: CMakeLists.txt  package.xml
vehicle_interface/include/vehicle_interface/: arduino_interface.h  arduino_serial.h
vehicle_interface/launch/: vehicle_interface.launch
vehicle_interface/scripts/: sonar_teleop.py
vehicle_interface/src/: arduino_interface.cpp  arduino_serial.cpp  interface.cpp  terminal_interface.cpp
vehicle_interface/srv/: sonarScan.srv
vehicle_perception/: CMakeLists.txt  package.xml
vehicle_perception/include/vehicle_perception/: surf_detector.h
vehicle_perception/launch/: vehicle_perception.launch
vehicle_perception/src/: blob_perception.cpp  imu_to_tf.cpp  surf_detection.cpp  surf_detection_example.cpp  surf_detector.cpp
