<?xml version="1.0"?>
<package>
  <name>vehicle_control</name>
  <version>0.0.0</version>
  <description>The vehicle_control package</description>
  
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <url type="website">http://www.irs.uji.es/summerschool2015 </url>
  <author email="dfornas@uji.es">David Fornas</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>

</package>