<?xml version="1.0"?>
<package>
  <name>vehicle_perception</name>
  <version>0.0.1</version>
  
  <description>The vehicle_perception package</description>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <url type="website">http://www.irs.uji.es/summerschool2015 </url>
  <author email="dfornas@uji.es">David Fornas</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend> 
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>